# Scene_Recognition_Project_Aria

./: unzip_csv_ariadata.sh
impl/: test.py
impl/AriaDensePointsToPLY/: README.md  aria_data.json  generate_PLY_from_dense_points.py
impl/AriaDensePointsToPLY/ReaderUsingC/: CMakeLists.txt  ply_generator.cpp  run_build_commands.sh  run_ply_generation.sh
impl/AriaTragectoryCamPoseExtraction/: aria_data.json  run_camara_trajectory_filteration.py
impl/AriaTragectoryCamPoseExtraction/filterByCameraPose/: filter-0.cpp  filter.cpp  run_build_commands.sh
impl/Miscellaneous/combineCamaraPoseViews/: aria_scenes.json  combinePointClouds.py  config_parser.py
impl/Miscellaneous/cropCeilingOfScenes/: aria_scenes.json  crop_from_z.py
impl/hashingProcess/: aria_scene_hash_computation.py  aria_scene_robustness_analyzer.py  aria_scene_uniqueness_analyzer.py  aria_scenes.json  scene_hash_analyzer copy.py
impl/hashingProcess/common/: complexity_analysis.py  csv_analysis.py  data_read.py  data_write.py  distance_computation.py  feature_computation.py  graph_generation.py  pcd_visualizer.py  utils.py
